log
Wed 20 Mar 2024 06:37:25 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:46:9: error: unused variable ‘element’ [-Werror=unused-variable]
   46 |   void* element = malloc(sizeof(int));
      |         ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
92b3858
Wed 20 Mar 2024 06:38:00 PM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|5
total_score: 0/70
9cdbf1c
Wed 20 Mar 2024 06:38:43 PM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|5
total_score: 0/70
a8d770b
Wed 20 Mar 2024 06:40:30 PM UTC: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
374a11a
Wed 20 Mar 2024 06:43:24 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|5
total_score: 0/70
1e5d3a3
Wed 20 Mar 2024 06:43:53 PM UTC: 
 exercises.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  0|5
total_score: 0/70
9d856da
Wed 20 Mar 2024 06:44:59 PM UTC: 
 exercises.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:50:14: error: ‘L’ undeclared (first use in this function)
   50 |     pushBack(L, elemento);
      |              ^
exercises.c:50:14: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:51:16: error: expected ‘;’ before ‘}’ token
   51 |     next(lista)
      |                ^
      |                ;
   52 |   }
      |   ~             
exercises.c:55:1: error: control reaches end of non-void function [-Werror=return-type]
   55 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
5d110ff
Wed 20 Mar 2024 06:45:11 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:50:14: error: ‘L’ undeclared (first use in this function)
   50 |     pushBack(L, elemento);
      |              ^
exercises.c:50:14: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:55:1: error: control reaches end of non-void function [-Werror=return-type]
   55 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0ce4355
Wed 20 Mar 2024 06:45:27 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:54:10: error: ‘L’ undeclared (first use in this function)
   54 |   return L;
      |          ^
exercises.c:54:10: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:55:1: error: control reaches end of non-void function [-Werror=return-type]
   55 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
99ea897
Wed 20 Mar 2024 06:45:58 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
5951ba8
Wed 20 Mar 2024 06:48:41 PM UTC: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:53:8: error: conflicting types for ‘elemento’; have ‘int *’
   53 |   int* elemento = first(L);
      |        ^~~~~~~~
exercises.c:46:9: note: previous definition of ‘elemento’ with type ‘void *’
   46 |   void* elemento = malloc(sizeof(int));
      |         ^~~~~~~~
exercises.c:55:23: error: expected ‘;’ before ‘}’ token
   55 |     elemento = next(L)
      |                       ^
      |                       ;
   56 |   }
      |   ~                    
Compilation failed
7445ac8
Wed 20 Mar 2024 06:48:52 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:53:8: error: conflicting types for ‘elemento’; have ‘int *’
   53 |   int* elemento = first(L);
      |        ^~~~~~~~
exercises.c:46:9: note: previous definition of ‘elemento’ with type ‘void *’
   46 |   void* elemento = malloc(sizeof(int));
      |         ^~~~~~~~
Compilation failed
00eb676
Wed 20 Mar 2024 06:50:34 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
0040c6f
Wed 20 Mar 2024 06:53:22 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:73:14: error: expected ‘;’ before ‘}’ token
   73 |   return suma
      |              ^
      |              ;
   74 | }
      | ~             
Compilation failed
54cdbd7
Wed 20 Mar 2024 06:53:34 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
666cbc8
Wed 20 Mar 2024 06:55:19 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
bef7dc4
Wed 20 Mar 2024 06:57:40 PM UTC: 
 exercises.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  3|2
total_score: 40/70
17cc1a6
Wed 20 Mar 2024 07:00:56 PM UTC: 
 exercises.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  3|2
total_score: 40/70
75118f9
Wed 20 Mar 2024 07:10:32 PM UTC: 
 exercises.c | 10 +++-------
 1 file changed, 3 insertions(+), 7 deletions(-)
 tests:  3|2
total_score: 40/70
5cb40e4
Wed 20 Mar 2024 07:18:39 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
d0741f7
